--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -73,7 +73,7 @@
 					<ol class="breadcrumb">
 						<li>
 							 
-							<a href="../private/index.xhtml" >
+							<a href="#{facesContext.externalContext.request.contextPath}/private/index.xhtml" >
 							<i class="fa fa-home"></i>&nbsp;&nbsp;Home</a>
 							&nbsp;
 							 #{menuMBean.urlNavigation} 
