--- a/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_diretriz_associada.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_diretriz_associada.jrxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" pageWidth="842" pageHeight="150" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
 	<property name="ireport.zoom" value="1.771561000000001"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -14,16 +13,9 @@
 		<defaultValueExpression><![CDATA[new Long (2154)]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT dir.descricao as diretriz
-FROM avaliacao.diretriz_associada dirass
-	INNER JOIN planejamento.diretriz dir ON dir.id_diretriz=dirass.id_diretriz
- 	INNER JOIN planejamento.programa prog ON prog.id_programa =dirass.id_programa
- 	INNER JOIN planejamento.exercicio exerc ON exerc.id_exercicio=dirass.id_exercicio
-
-WHERE prog.id_programa = $P!{param_id_prog}
-AND exerc.id_exercicio = $P!{param_id_exerc}]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="diretriz" class="java.lang.String"/>
+	<field name="_THIS" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -63,8 +55,36 @@ AND exerc.id_exercicio = $P!{param_id_exerc}]]>
 					<font size="8"/>
 					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{diretriz}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{_THIS}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
+	<noData>
+		<band height="53">
+			<textField isStretchWithOverflow="true">
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" mode="Transparent" x="0" y="34" width="802" height="17" forecolor="#000000" backcolor="#FEFEFE" uuid="d1b68db6-24e2-4f7d-b320-d4aeb76fe664"/>
+				<textElement textAlignment="Justified" verticalAlignment="Middle">
+					<font size="8"/>
+					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Nenhuma diretriz associada ao programa"]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement mode="Opaque" x="0" y="0" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F" uuid="c11a8a86-83ab-43b8-8a04-d993a1fc4db0"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10" pdfFontName="Helvetica-Bold"/>
+					<paragraph leftIndent="5"/>
+				</textElement>
+				<text><![CDATA[3. DIRETRIZ(ES) ASSOCIADA(S)]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="0" y="20" width="802" height="14" backcolor="#C8C8C8" uuid="d56d2267-6f55-4331-9349-e0fc18c07655"/>
+				<textElement verticalAlignment="Middle">
+					<font size="9" pdfFontName="Helvetica-Bold"/>
+					<paragraph leftIndent="5"/>
+				</textElement>
+				<text><![CDATA[Diretrizes]]></text>
+			</staticText>
+		</band>
+	</noData>
 </jasperReport>
