--- a/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_painel_associado.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_painel_associado.jrxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_painel_associado" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_painel_associado" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
 	<property name="ireport.zoom" value="1.771561000000001"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -14,15 +13,9 @@
 		<defaultValueExpression><![CDATA[new Long (2154)]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT ind.indicador as indicador
-FROM avaliacao.painel_associado panelAssoc
-	INNER JOIN planejamento.indicadores ind ON (ind.id_indicadores = panelAssoc.id_indicador)
-	INNER JOIN planejamento.programa prog USING (id_programa)
-   INNER JOIN planejamento.exercicio exerc on  exerc.id_exercicio=panelAssoc.id_exercicio
-WHERE prog.id_programa = $P!{param_id_prog}
-AND exerc.id_exercicio = $P!{param_id_exerc}]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="indicador" class="java.lang.String"/>
+	<field name="_THIS" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -61,9 +54,37 @@ AND exerc.id_exercicio = $P!{param_id_exerc}]]>
 						<font size="8"/>
 						<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{indicador}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{_THIS}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
 	</detail>
+	<noData>
+		<band height="55">
+			<staticText>
+				<reportElement mode="Opaque" x="0" y="0" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F" uuid="bd2cdbde-f801-464e-8aa2-994f4d5d7081"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10" pdfFontName="Helvetica-Bold"/>
+					<paragraph leftIndent="5"/>
+				</textElement>
+				<text><![CDATA[4. INDICADOR(ES) DE CONSTANTES NO PPA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="0" y="20" width="802" height="14" backcolor="#C8C8C8" uuid="81b249be-142e-4bc4-8898-b92c8fcba716"/>
+				<textElement verticalAlignment="Middle">
+					<font size="9" pdfFontName="Helvetica-Bold"/>
+					<paragraph leftIndent="5"/>
+				</textElement>
+				<text><![CDATA[Indicadores]]></text>
+			</staticText>
+			<textField isStretchWithOverflow="true">
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" mode="Transparent" x="0" y="34" width="802" height="17" forecolor="#000000" backcolor="#FEFEFE" uuid="23bec8ec-ffc8-4e59-818a-cf717454f62d"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Nenhum indicador associada ao programa"]]></textFieldExpression>
+			</textField>
+		</band>
+	</noData>
 </jasperReport>
